--- a/ArtemisPDU/firmware/Artemis-PDU.X/mcc-manifest-generated-success.yml
+++ b/ArtemisPDU/firmware/Artemis-PDU.X/mcc-manifest-generated-success.yml
@@ -2,7 +2,7 @@
 
 manifest_file_version: 1.0.0
 project: Artemis-PDU
-creation_date: 2023-12-10T17:19:43.329-10:00[Pacific/Honolulu]
+creation_date: 2023-12-10T17:35:18.705-10:00[Pacific/Honolulu]
 operating_system: Windows 10
 mcc_mode: IDE
 mcc_mode_version: v6.15
@@ -15,6 +15,10 @@ is_mcc_offline: false
 is_using_prerelease_versions: false
 mcc_content_registries: https://registry.npmjs.org/
 device_library: {library_class: com.microchip.mcc.harmony.Harmony3Library, name: Harmony
-    V3, version: 1.3.2}
+    V3, version: 1.4.0}
 packs: {name: SAME51_DFP, version: 3.7.242}
-modules: []
+modules:
+- {name: csp, type: HARMONY, version: v3.18.0}
+- {name: core, type: HARMONY, version: v3.13.1}
+- {name: CMSIS_5, type: HARMONY, version: 5.9.0}
+- {name: CMSIS-FreeRTOS, type: HARMONY, version: v10.5.1}
